[gd_scene load_steps=8 format=3 uid="uid://dmdjrv07afm4t"]

[ext_resource type="Script" path="res://levels/level.gd" id="1_shfy4"]
[ext_resource type="TileSet" uid="uid://c3v2yjcnwy4y2" path="res://levels/level_00.tres" id="2_kiifw"]
[ext_resource type="Script" path="res://levels/Enemy_born.gd" id="3_xnhj7"]
[ext_resource type="Script" path="res://levels/GUI.gd" id="4_osj5a"]
[ext_resource type="Script" path="res://levels/Ground.gd" id="5_q8m8l"]
[ext_resource type="PackedScene" uid="uid://cqaa7avq51mgr" path="res://Base.tscn" id="6_uu5y0"]

[sub_resource type="Curve2D" id="Curve2D_3lfub"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 351, 696, 0, 0, 0, 0, 353, 359, 0, 0, 0, 0, 163, 346, 0, 0, 0, 0, 165, 162, 0, 0, 0, 0, 990, 161, 0, 0, 0, 0, 995, 281, 0, 0, 0, 0, 1053, 291, 0, 0, 0, 0, 1050, 406, 0, 0, 0, 0, 872, 422, 0, 0, 0, 0, 874, 607, 0, 0, 0, 0, 1196, 606)
}
point_count = 11

[node name="Level_00" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_shfy4")

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource("2_kiifw")
format = 2
layer_0/name = "base"
layer_0/tile_data = PackedInt32Array(655379, 0, 2, 655378, 0, 2, 589841, 196608, 65538, 589840, 196608, 65538, 589839, 196608, 65538, 524303, 0, 2, 524302, 0, 2, 524301, 196608, 2, 458764, 0, 2, 458763, 0, 2, 393226, 0, 2, 393225, 0, 2, 327688, 0, 2, 327687, 0, 2, 262149, 0, 2, 196612, 0, 2, 196611, 0, 2, 131074, 262144, 262146, 65538, 0, 2, 65537, 0, 2, 1, 0, 2, 0, 0, 2, 655360, 0, 2, 655361, 0, 2, 655362, 0, 2, 655363, 0, 2, 655364, 0, 2, 655365, 196608, 2, 655366, 0, 2, 655367, 0, 2, 655368, 0, 2, 655369, 0, 2, 655370, 0, 2, 655371, 0, 2, 655372, 0, 2, 655373, 0, 2, 655374, 0, 2, 655375, 0, 2, 655376, 0, 2, 655377, 0, 2, 393219, 0, 2, 393220, 0, 2, 458757, 196608, 2, 458758, 0, 2, 458752, 0, 2, 458753, 0, 2, 393218, 0, 2, 327684, 196608, 65538, 262151, 0, 2, 196616, 0, 2, 196617, 0, 2, 327683, 196608, 65538, 458755, 131072, 2, 524291, 0, 2, 589827, 0, 2, 458756, 0, 2, 524292, 0, 2, 589828, 0, 2, 393221, 196608, 2, 524293, 196608, 2, 589829, 196608, 2, 327686, 131072, 2, 393222, 0, 2, 524294, 65536, 2, 589830, 0, 2, 393223, 0, 2, 458759, 0, 2, 524295, 0, 2, 589831, 0, 2, 393224, 131072, 2, 458760, 65536, 2, 524296, 0, 2, 589832, 0, 2, 327689, 0, 2, 458761, 0, 2, 524297, 0, 2, 589833, 0, 2, 327690, 0, 2, 458762, 0, 2, 524298, 0, 2, 589834, 0, 2, 327691, 0, 2, 393227, 0, 2, 524299, 0, 2, 589835, 0, 2, 327692, 0, 2, 393228, 65536, 2, 524300, 0, 2, 589836, 0, 2, 327693, 0, 2, 393229, 262144, 262146, 458765, 196608, 2, 589837, 262144, 65538, 327694, 0, 2, 393230, 196608, 65538, 458766, 0, 2, 589838, 196608, 65538, 327695, 0, 2, 393231, 196608, 65538, 458767, 0, 2, 327696, 196608, 2, 393232, 262144, 196610, 458768, 0, 2, 524304, 0, 2, 327697, 0, 2, 393233, 0, 2, 458769, 0, 2, 524305, 0, 2, 327698, 0, 2, 393234, 0, 2, 458770, 0, 2, 524306, 0, 2, 589842, 196608, 65538, 327699, 0, 2, 393235, 0, 2, 458771, 0, 2, 524307, 0, 2, 589843, 196608, 65538, 65536, 0, 2, 131072, 0, 2, 196608, 0, 2, 262144, 0, 2, 327680, 0, 2, 393216, 0, 2, 524288, 0, 2, 589824, 0, 2, 131073, 0, 2, 196609, 0, 2, 262145, 0, 2, 327681, 0, 2, 393217, 0, 2, 524289, 0, 2, 589825, 0, 2, 2, 0, 2, 196610, 196608, 2, 262146, 196608, 2, 327682, 262144, 65538, 458754, 0, 2, 524290, 0, 2, 589826, 0, 2, 65539, 0, 2, 131075, 196608, 65538, 262147, 0, 2, 131076, 196608, 65538, 262148, 0, 2, 5, 0, 2, 196613, 0, 2, 6, 0, 2, 65542, 0, 2, 131078, 196608, 65538, 7, 0, 2, 65543, 0, 2, 131079, 196608, 65538, 196615, 0, 2, 8, 0, 2, 65544, 0, 2, 131080, 196608, 65538, 262152, 0, 2, 9, 0, 2, 65545, 0, 2, 131081, 196608, 65538, 262153, 0, 2, 10, 0, 2, 65546, 0, 2, 131082, 196608, 65538, 196618, 0, 2, 262154, 0, 2, 11, 0, 2, 65547, 0, 2, 131083, 196608, 65538, 196619, 0, 2, 262155, 0, 2, 12, 0, 2, 65548, 0, 2, 131084, 196608, 65538, 196620, 0, 2, 262156, 0, 2, 13, 0, 2, 65549, 0, 2, 131085, 196608, 65538, 196621, 0, 2, 262157, 0, 2, 14, 0, 2, 65550, 0, 2, 131086, 196608, 65538, 196622, 0, 2, 262158, 0, 2, 15, 0, 2, 65551, 0, 2, 131087, 262144, 327682, 196623, 196608, 2, 262159, 262144, 65538, 16, 0, 2, 65552, 0, 2, 131088, 0, 2, 196624, 0, 2, 262160, 262144, 327682, 17, 0, 2, 65553, 0, 2, 131089, 0, 2, 196625, 0, 2, 262161, 0, 2, 18, 0, 2, 65554, 0, 2, 131090, 0, 2, 196626, 0, 2, 262162, 0, 2, 19, 0, 2, 65555, 0, 2, 131091, 0, 2, 196627, 0, 2, 262163, 0, 2, 327685, 262144, 327682, 262150, 0, 2, 196614, 0, 2, 131077, 196608, 65538, 65541, 0, 2, 65540, 0, 2, 4, 0, 2, 3, 0, 2)
layer_1/name = "bae_turels"
layer_1/enabled = true
layer_1/modulate = Color(1, 1, 1, 1)
layer_1/y_sort_enabled = false
layer_1/y_sort_origin = 0
layer_1/z_index = 0
layer_1/tile_data = PackedInt32Array(458758, 1, 0, 327695, 1, 0, 196617, 1, 0, 196611, 1, 0, 589842, 65538, 3)
script = ExtResource("5_q8m8l")

[node name="Enemy_path" type="Path2D" parent="."]
scale = Vector2(2, 2)
curve = SubResource("Curve2D_3lfub")
script = ExtResource("3_xnhj7")

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1285.0
offset_bottom = 45.0
script = ExtResource("4_osj5a")

[node name="HBoxContainer" type="HBoxContainer" parent="GUI"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "Score
"

[node name="Label2" type="Label" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "Waves
"

[node name="Label3" type="Label" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "HP"

[node name="Build_mode" type="Button" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "Build"

[node name="Button" type="Button" parent="GUI/HBoxContainer"]
layout_mode = 2
text = "Exit
"

[node name="Wave_timer" type="Timer" parent="."]
wait_time = 20.0

[node name="Spawn_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Node2D" parent="." instance=ExtResource("6_uu5y0")]
position = Vector2(2348, 1218)

[connection signal="timeout" from="Wave_timer" to="Enemy_path" method="_on_wave_timer_timeout"]
[connection signal="timeout" from="Spawn_timer" to="Enemy_path" method="_on_spawn_timer_timeout"]
